welcome.lessons.welcome.bat.bool1.Max1020.scala.code
def max1020(a:Int, b:Int):Int = {
	if (10<=a && a<=20 && 10<=b && b<=20 
	{if ( a<b) {return b}
	else {return a}})
	else {return 0}
}
